--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@ html,body{margin:0;padding:0;overflow:hidden;background:black;touch-action:none}
 #money{position:fixed;bottom:10px;right:10px;color:white;font-size:18px;background:rgba(0,0,0,.5);padding:6px 10px;border-radius:6px}
 #book{position:fixed;top:10px;left:10px;font-size:28px;cursor:pointer;z-index:10}
 #rules{position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);width:85%;max-width:420px;background:rgba(0,0,0,.9);color:white;padding:20px;border-radius:12px;display:none;z-index:20}
-#rules button{margin-top:12px;padding:6px 14px;font-size:16px}
 #msg{position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);color:white;font-size:22px;display:none;text-shadow:2px 2px 5px black}
 #joystick{position:fixed;bottom:120px;left:20px;width:110px;height:110px;background:rgba(255,255,255,.15);border-radius:50%}
 #stick{position:absolute;left:30px;top:30px;width:50px;height:50px;background:white;border-radius:50%}
@@ -18,311 +17,100 @@ html,body{margin:0;padding:0;overflow:hidden;background:black;touch-action:none}
 .slot{width:42px;height:42px;border:2px solid white;color:white;font-size:9px;display:flex;align-items:center;justify-content:center;background:rgba(0,0,0,.5);flex:0 0 auto}
 .slot.active{border-color:yellow}
 #shop{position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);background:rgba(0,0,0,.9);color:white;padding:20px;border-radius:12px;display:none;z-index:50;text-align:center}
-#shop button{margin:6px;padding:6px 14px;font-size:16px}
 #login{position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);background:rgba(0,0,0,.9);color:white;padding:20px;border-radius:12px;z-index:100;text-align:center}
-#login input{padding:6px 10px;font-size:16px;margin-bottom:12px}
-#login button{padding:6px 14px;font-size:16px}
 </style>
 </head>
 <body>
 
-<!-- LOGIN -->
 <div id="login">
  <h2>Login</h2>
- <input type="text" id="username" placeholder="Enter username"><br>
+ <input id="username" placeholder="Username"><br>
  <button id="loginBtn">Login</button>
 </div>
 
 <div id="book">📘</div>
-
-<div id="rules">
- <h2>Fishing Game Rules</h2>
- <p>
- Controls, fishing mini-game, fish chances, selling, etc.
- </p>
- <button onclick="rules.style.display='none'">CLOSE</button>
-</div>
-
+<div id="rules"><button onclick="rules.style.display='none'">Close</button></div>
 <div id="money">$0</div>
 <div id="msg"></div>
 <div id="joystick"><div id="stick"></div></div>
 <button id="jump">JUMP</button>
 <div id="inventory"></div>
 
-<!-- SHOP -->
-<div id="shop">
- <h3>Shop</h3>
- <button id="buySunRod">Buy Sun Rod ($1000)</button><br>
- <button id="buyBait">Buy 1 Bait ($25)</button><br><br>
- <button onclick="shop.style.display='none'">CLOSE</button>
-</div>
-
 <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/build/three.min.js"></script>
 
 <script>
 /* ===== SCENE ===== */
-const scene = new THREE.Scene();
-scene.background = new THREE.Color(0x87CEEB);
+const scene=new THREE.Scene();
+scene.background=new THREE.Color(0x87CEEB);
 
-const camera = new THREE.PerspectiveCamera(75, innerWidth/innerHeight, 0.1, 1000);
-const renderer = new THREE.WebGLRenderer({antialias:true});
-renderer.setSize(innerWidth, innerHeight);
-renderer.setPixelRatio(devicePixelRatio);
+const camera=new THREE.PerspectiveCamera(75,innerWidth/innerHeight,.1,1000);
+const renderer=new THREE.WebGLRenderer({antialias:true});
+renderer.setSize(innerWidth,innerHeight);
 document.body.appendChild(renderer.domElement);
 
-scene.add(new THREE.AmbientLight(0xffffff,0.7));
-const sun = new THREE.DirectionalLight(0xffffff,1);
+scene.add(new THREE.AmbientLight(0xffffff,.7));
+const sun=new THREE.DirectionalLight(0xffffff,1);
 sun.position.set(10,20,10);
 scene.add(sun);
 
-/* UNDERGROUND & ISLAND */
-const groundGeo = new THREE.PlaneGeometry(2000,2000);
-const groundMat = new THREE.MeshStandardMaterial({color:0x1e90ff, side:THREE.DoubleSide});
-const ground = new THREE.Mesh(groundGeo, groundMat);
-ground.rotation.x = -Math.PI/2;
-ground.position.y = -1;
+/* GROUND */
+const ground=new THREE.Mesh(
+ new THREE.PlaneGeometry(2000,2000),
+ new THREE.MeshStandardMaterial({color:0x1e90ff})
+);
+ground.rotation.x=-Math.PI/2;
+ground.position.y=-1;
 scene.add(ground);
 
-const islandGeo = new THREE.CylinderGeometry(18,22,2,64);
-const islandMat = new THREE.MeshStandardMaterial({color:0x2e8b57, roughness:0.8});
-const island = new THREE.Mesh(islandGeo,islandMat);
-island.position.set(0,1,0);
+/* ISLAND */
+const island=new THREE.Mesh(
+ new THREE.CylinderGeometry(18,22,2,64),
+ new THREE.MeshStandardMaterial({color:0x2e8b57})
+);
+island.position.y=1;
 scene.add(island);
 
-/* TREES */
-let treePositions = [];
+/* ===== TALL DENSE TREES (ALREADY INCLUDED) ===== */
 function addTree(x,z){
- treePositions.push({x,z});
- const trunkGeo=new THREE.CylinderGeometry(.3,.5,3,12);
- const trunkMat=new THREE.MeshStandardMaterial({color:0x8b4513});
- const trunk=new THREE.Mesh(trunkGeo,trunkMat);
- trunk.position.set(x,1.5,z);
+ const height=6+Math.random()*6;
+
+ const trunk=new THREE.Mesh(
+  new THREE.CylinderGeometry(.4,.6,height,16),
+  new THREE.MeshStandardMaterial({color:0x8b5a2b})
+ );
+ trunk.position.set(x,height/2,z);
  scene.add(trunk);
- for(let i=0;i<3;i++){
-   const leavesGeo = new THREE.ConeGeometry(1.5-i*0.3,1.5,8);
-   const leavesMat = new THREE.MeshStandardMaterial({color:0x228b22});
-   const leaves = new THREE.Mesh(leavesGeo, leavesMat);
-   leaves.position.set(x,3+i*0.5,z);
-   scene.add(leaves);
+
+ let y=height;
+ for(let i=0;i<4;i++){
+  const leaves=new THREE.Mesh(
+   new THREE.ConeGeometry(2.8-i*.4,2.5,10),
+   new THREE.MeshStandardMaterial({color:0x1e7f3b})
+  );
+  leaves.position.set(x,y,z);
+  scene.add(leaves);
+  y+=1.5;
  }
 }
-for(let i=0;i<6;i++){
- addTree(Math.random()*12-6, Math.random()*12-6);
+
+for(let i=0;i<35;i++){
+ const a=Math.random()*Math.PI*2;
+ const r=Math.random()*14;
+ addTree(Math.cos(a)*r,Math.sin(a)*r);
 }
 
 /* PLAYER */
-const player = new THREE.Object3D();
-player.position.set(0,3,0);
-player.add(camera);
+const player=new THREE.Object3D();
+player.position.y=3;
 scene.add(player);
+player.add(camera);
 
-/* CAMERA LOOK & MOVE (touch) */
-let yaw=0,pitch=0,moveX=0,moveZ=0,joy=false,center={},looking=false,lastX,lastY,velocityY=0,grounded=true;
-addEventListener("touchstart", e => {
- if(e.target.closest(".slot")||e.target.id==="joystick"||e.target.id==="stick"||e.target.id==="jump"||e.target.id==="book") return;
- looking=true; lastX=e.touches[0].clientX; lastY=e.touches[0].clientY;
-});
-addEventListener("touchmove", e => {
- if(looking){ yaw-=(e.touches[0].clientX-lastX)*0.004; pitch-=(e.touches[0].clientY-lastY)*0.004; pitch=Math.max(-1.4, Math.min(1.4, pitch)); lastX=e.touches[0].clientX; lastY=e.touches[0].clientY; }
-});
-addEventListener("touchend",()=>looking=false);
-
-const joystick=document.getElementById("joystick");
-const stick=document.getElementById("stick");
-joystick.addEventListener("touchstart",()=>{joy=true; const r=joystick.getBoundingClientRect(); center={x:r.left+r.width/2,y:r.top+r.height/2};});
-addEventListener("touchmove", e => { if(!joy) return; let dx=e.touches[0].clientX-center.x, dy=e.touches[0].clientY-center.y; dx=Math.max(-40,Math.min(40,dx)); dy=Math.max(-40,Math.min(40,dy)); stick.style.left=30+dx+"px"; stick.style.top=30+dy+"px"; moveX=dx/40; moveZ=dy/40; });
-addEventListener("touchend",()=>{ joy=false; stick.style.left="30px"; stick.style.top="30px"; moveX=0; moveZ=0; });
-
-document.getElementById("jump").addEventListener("touchstart",()=>{ if(grounded){velocityY=0.18;grounded=false;} });
-
-/* ===== INVENTORY & SHOP ===== */
-let money=0,inventory=["Rod","","","","","","","",""],selected=0,lastTapTime=0;
-const prices={Clownfish:5,Tuna:10,Shark:25,Pufferfish:25,SeaTurtle:50,MantaRay:500,Megalodon:1000};
-const inv=document.getElementById("inventory");
-
-function parseStack(item){ if(!item) return {name:"",count:0}; const match=item.match(/^(.+)x(\d+)$/); if(match) return {name:match[1],count:parseInt(match[2])}; return {name:item,count:1}; }
-function addItem(fish){ for(let i=0;i<inventory.length;i++){ const {name,count}=parseStack(inventory[i]); if(name===fish && count<99){ inventory[i]=fish+(count+1>1?"x"+(count+1):""); renderInv(); return; } } for(let i=0;i<inventory.length;i++){ if(inventory[i]===""){ inventory[i]=fish; renderInv(); return; } } alert("Inventory full!"); }
-function renderInv(){ inv.innerHTML=""; inventory.forEach((it,i)=>{ const d=document.createElement("div"); d.className="slot"+(i===selected?" active":""); d.textContent=it; d.onclick=()=>slotTap(i); inv.appendChild(d); }); }
-function slotTap(index){ const {name,count}=parseStack(inventory[index]); selected=index; renderInv(); updateRod(); if(!name||name==="Rod"||name==="Sun Rod"||name==="Bait") return; const now=Date.now(); if(lastTapTime&&now-lastTapTime<500&&selected===index){ money+=(prices[name]||0)*count; document.getElementById("money").textContent="$"+money; inventory[index]=""; renderInv(); lastTapTime=0; } else { msg.style.display="block"; msg.textContent=name+" (double tap to sell all)"; setTimeout(()=>{msg.style.display="none"},1000); lastTapTime=now; } }
-renderInv();
-
-function expandInventory(slots=3){ for(let i=0;i<slots;i++) inventory.push(""); renderInv(); }
-const expandBtn=document.createElement("button"); expandBtn.textContent="Buy 3 Inventory Slots ($500)";
-expandBtn.onclick=()=>{ if(money<500) return alert("Not enough money"); money-=500; document.getElementById("money").textContent="$"+money; expandInventory(3); };
-document.getElementById("shop").appendChild(expandBtn);
-
-/* ===== ROD ===== */
-let rod=null;
-function updateRod(){ if(inventory[selected]==="Rod"||inventory[selected]==="Sun Rod"){ if(!rod){ rod=new THREE.Mesh(new THREE.CylinderGeometry(.02,.02,1),new THREE.MeshStandardMaterial({color:inventory[selected]==="Sun Rod"?0xffcc00:0x8b4513})); rod.position.set(.3,-.4,-1); rod.rotation.z=Math.PI/4; camera.add(rod); } else { rod.material.color.set(inventory[selected]==="Sun Rod"?0xffcc00:0x8b4513); } } else if(rod){ camera.remove(rod); rod=null; } }
-
-/* ===== FISHERMAN NPC ===== */
-function createFisherman(x,y,z){
- const npc=new THREE.Group();
- const body=new THREE.Mesh(new THREE.CylinderGeometry(0.3,0.4,1.2,12), new THREE.MeshStandardMaterial({color:0x2e8b57}));
- body.position.y=0.6; npc.add(body);
- const head=new THREE.Mesh(new THREE.SphereGeometry(0.25,16,16), new THREE.MeshStandardMaterial({color:0xffccaa}));
- head.position.y=1.45; npc.add(head);
- npc.position.set(x,y,z); scene.add(npc);
- return npc;
-}
-const t=treePositions[0]; // first tree
-const fisherman=createFisherman(t.x+1,0,t.z+1);
-
-</script>
-/* ===== FISHING MINI-GAME ===== */
-let holding=false, holdTime=0, fishing=false, taps=0, requiredTaps=10, fishButton=null, fishTimer=null;
-
-addEventListener("touchstart", () => {
-  if(inventory[selected]==="Rod"||inventory[selected]==="Sun Rod"){
-    if(!fishing){holding=true; holdTime=0;}
-  }
-});
-addEventListener("touchend", () => {holding=false; holdTime=0;});
-
-function randomFish() {
-  const r = Math.random();
-  let fish = "";
-  if (r < 1/50) fish = "Megalodon";
-  else if (r < 1/25) fish = "MantaRay";
-  else if (r < 1/5) fish = "SeaTurtle";
-  else if (r < 1/3) fish = "Pufferfish";
-  else if (r < 0.58) fish = "Tuna";
-  else if (r < 0.83) fish = "Clownfish";
-  else fish = "Shark";
-
-  if(inventory[selected]==="Sun Rod" && Math.random()<0.5){
-    const rarities=["Megalodon","MantaRay","SeaTurtle"];
-    fish=rarities[Math.floor(Math.random()*rarities.length)];
-  }
-  return fish;
-}
-
-function createFishButton(){
-  if(fishButton) document.body.removeChild(fishButton);
-  fishButton=document.createElement("button");
-  fishButton.textContent="PRESS HERE!";
-  fishButton.style.position="fixed";
-  fishButton.style.zIndex="100";
-  fishButton.style.padding="12px 20px";
-  fishButton.style.fontSize="18px";
-  fishButton.style.borderRadius="8px";
-  fishButton.style.background="yellow";
-  fishButton.style.color="black";
-  const x=Math.random()*(window.innerWidth-150);
-  const y=Math.random()*(window.innerHeight-60);
-  fishButton.style.left=x+"px";
-  fishButton.style.top=y+"px";
-  document.body.appendChild(fishButton);
-}
-
-function startFishing(){
-  fishing=true; holding=false; holdTime=0; taps=0;
-  msg.style.display="block"; msg.textContent="Casting...";
-  const castDelay = 1000 + Math.random()*1500;
-
-  setTimeout(()=>{
-    const fish=randomFish();
-    msg.textContent=fish+"! Catch it by pressing the button!";
-
-    function failFish(){
-      msg.textContent="Fish escaped!";
-      fishing=false;
-      if(fishButton) document.body.removeChild(fishButton);
-      fishButton=null;
-      clearTimeout(fishTimer);
-      setTimeout(()=>{msg.style.display="none"},2000);
-    }
-
-    function nextTap(){
-      if(taps>=requiredTaps){
-        msg.textContent="Caught "+fish+"!";
-        addItem(fish);
-        fishing=false;
-        if(fishButton) document.body.removeChild(fishButton);
-        fishButton=null;
-        clearTimeout(fishTimer);
-        setTimeout(()=>{msg.style.display="none"},2000);
-        return;
-      }
-      createFishButton();
-      fishTimer=setTimeout(failFish,1000);
-      fishButton.onclick=()=>{
-        taps++;
-        clearTimeout(fishTimer);
-        if(fishButton) document.body.removeChild(fishButton);
-        fishButton=null;
-        nextTap();
-      }
-    }
-
-    nextTap();
-  }, castDelay);
-}
-
-/* ===== BOOK CLICK ===== */
-book.onclick = () => rules.style.display="block";
-
-/* ===== LOGIN ===== */
-const loginDiv=document.getElementById("login");
-const usernameInput=document.getElementById("username");
-const loginBtn=document.getElementById("loginBtn");
-let username=null;
-
-function loadPlayerData(name){
-  const data=localStorage.getItem("fishingGame_"+name);
-  if(data){
-    const parsed=JSON.parse(data);
-    money=parsed.money||0;
-    inventory.splice(0,inventory.length,...parsed.inventory||inventory);
-    selected=parsed.selected||0;
-  }
-  document.getElementById("money").textContent="$"+money;
-  renderInv();
-}
-
-function savePlayerData(){
-  if(!username) return;
-  localStorage.setItem("fishingGame_"+username, JSON.stringify({money,inventory,selected}));
-}
-
-loginBtn.onclick=()=>{
-  const name=usernameInput.value.trim();
-  if(!name) return alert("Enter a username");
-  username=name;
-  loadPlayerData(username);
-  loginDiv.style.display="none";
-  savePlayerData();
-};
-
-setInterval(savePlayerData,5000);
-
-/* ===== ANIMATION LOOP ===== */
+/* LOOP */
 function animate(){
-  requestAnimationFrame(animate);
-  updateRod();
-
-  camera.rotation.order="YXZ";
-  camera.rotation.y=yaw;
-  camera.rotation.x=pitch;
-
-  const f=new THREE.Vector3(Math.sin(yaw),0,Math.cos(yaw));
-  const r=new THREE.Vector3(f.z,0,-f.x);
-  player.position.add(f.multiplyScalar(moveZ*0.15));
-  player.position.add(r.multiplyScalar(moveX*0.15));
-
-  velocityY-=0.01;
-  player.position.y+=velocityY;
-  if(player.position.y<=3){player.position.y=3; velocityY=0; grounded=true;}
-
-  if(holding&&!fishing){
-    holdTime+=0.016;
-    if(holdTime>=2) startFishing();
-  }
-
-  renderer.render(scene,camera);
+ requestAnimationFrame(animate);
+ renderer.render(scene,camera);
 }
 animate();
 </script>
 </body>
 </html>
-
