--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -129,18 +130,28 @@ html,body{margin:0;padding:0;overflow:hidden;background:black;touch-action:none}
 <div id="rules">
  <h2>Fishing Game Rules</h2>
  <p>
- 🎮 Controls<br>
+ 🎮 <b>Controls</b><br>
  • Move with left joystick<br>
  • Swipe screen to look<br>
  • Jump with jump button<br><br>
 
- 🎣 Fishing<br>
+ 🎣 <b>Fishing</b><br>
  • Equip Rod from inventory<br>
  • Hold screen 2 seconds to cast<br>
  • Wait for fish<br>
- • Tap appearing button quickly<br><br>
+ • A "Press Here" button will spawn randomly<br>
+ • Tap it within 1 second, 10 times to catch the fish<br><br>
 
- 💰 Selling<br>
+ 🐟 <b>Fish Chances</b><br>
+ • Clownfish – ~25%<br>
+ • Tuna – ~25%<br>
+ • Shark – ~50%<br>
+ • Pufferfish – 1/3<br>
+ • Sea Turtle – 1/5<br>
+ • Manta Ray – 1/25<br>
+ • Megalodon – 1/50<br><br>
+
+ 💰 <b>Selling</b><br>
  • Tap fish once to preview<br>
  • Tap twice to sell
  </p>
@@ -154,6 +165,7 @@ html,body{margin:0;padding:0;overflow:hidden;background:black;touch-action:none}
 <button id="jump">JUMP</button>
 <div id="inventory"></div>
 
+<!-- SHOP -->
 <div id="shop">
  <h3>Shop</h3>
  <button id="buySunRod">Buy Sun Rod ($1000)</button><br>
@@ -162,7 +174,7 @@ html,body{margin:0;padding:0;overflow:hidden;background:black;touch-action:none}
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/build/three.min.js"></script>
-
+<script src="https://cdn.jsdelivr.net/npm/three@0.152.2/examples/js/controls/OrbitControls.js"></script>
 <script>
 /* ===== SCENE ===== */
 const scene=new THREE.Scene();
@@ -177,30 +189,47 @@ document.body.appendChild(renderer.domElement);
 scene.add(new THREE.AmbientLight(0xffffff,.7));
 const sun=new THREE.DirectionalLight(0xffffff,1);
 sun.position.set(10,20,10);
+sun.castShadow=true;
 scene.add(sun);
 
-/* WATER */
-const water=new THREE.Mesh(
- new THREE.PlaneGeometry(2000,2000),
- new THREE.MeshStandardMaterial({color:0x1e90ff,side:THREE.DoubleSide})
-);
-water.rotation.x=-Math.PI/2;
-water.position.y=-1;
-scene.add(water);
+/* BLUE UNDERGROUND */
+const undergroundGeo=new THREE.PlaneGeometry(2000,2000,1,1);
+const undergroundMat=new THREE.MeshStandardMaterial({color:0x1e90ff,side:THREE.DoubleSide});
+const underground=new THREE.Mesh(undergroundGeo,undergroundMat);
+underground.rotation.x=-Math.PI/2;
+underground.position.y=-1;
+scene.add(underground);
 
 /* ISLAND */
-const island=new THREE.Mesh(
- new THREE.CylinderGeometry(18,22,2,64),
- new THREE.MeshStandardMaterial({color:0x2e8b57})
-);
-island.position.y=1;
+const islandGeo=new THREE.CylinderGeometry(18,22,2,64);
+const islandMat=new THREE.MeshStandardMaterial({color:0x2e8b57,roughness:.8,metalness:.1});
+const island=new THREE.Mesh(islandGeo,islandMat);
+island.position.set(0,1,0);
 scene.add(island);
 
-/* SHOP ORB */
-const orb=new THREE.Mesh(
- new THREE.SphereGeometry(.4,16,16),
- new THREE.MeshStandardMaterial({color:0xffff00,emissive:0xffff00})
-);
+/* TREES */
+function addTree(x,z){
+ const trunkGeo=new THREE.CylinderGeometry(.3,.5,3,12);
+ const trunkMat=new THREE.MeshStandardMaterial({color:0x8b4513});
+ const trunk=new THREE.Mesh(trunkGeo,trunkMat);
+ trunk.position.set(x,1.5,z);
+ trunk.castShadow=true;
+ scene.add(trunk);
+ for(let i=0;i<3;i++){
+   const leavesGeo=new THREE.ConeGeometry(1.5-i*.3,1.5,8);
+   const leavesMat=new THREE.MeshStandardMaterial({color:0x228b22});
+   const leaves=new THREE.Mesh(leavesGeo,leavesMat);
+   leaves.position.set(x,3+i*.5,z);
+   leaves.castShadow=true;
+   scene.add(leaves);
+ }
+}
+for(let i=0;i<6;i++){
+ addTree(Math.random()*12-6,Math.random()*12-6);
+}
+
+/* ORB */
+const orb=new THREE.Mesh(new THREE.SphereGeometry(.4,16,16),new THREE.MeshStandardMaterial({color:0xffff00,emissive:0xffff00,emissiveIntensity:.7}));
 orb.position.set(3,1.8,3);
 scene.add(orb);
 
@@ -231,12 +260,331 @@ addEventListener("touchmove",e=>{
 });
 addEventListener("touchend",()=>looking=false);
 
-/* LOOP */
+/* MOVE */
+let moveX=0,moveZ=0,joy=false,center={};
+joystick.addEventListener("touchstart",()=>{
+ joy=true;
+ const r=joystick.getBoundingClientRect();
+ center={x:r.left+r.width/2,y:r.top+r.height/2};
+});
+addEventListener("touchmove",e=>{
+ if(!joy)return;
+ let dx=e.touches[0].clientX-center.x;
+ let dy=e.touches[0].clientY-center.y;
+ dx=Math.max(-40,Math.min(40,dx));
+ dy=Math.max(-40,Math.min(40,dy));
+ stick.style.left=30+dx+"px";
+ stick.style.top=30+dy+"px";
+ moveX=dx/40;
+ moveZ=dy/40;
+});
+addEventListener("touchend",()=>{
+ joy=false;
+ stick.style.left="30px";
+ stick.style.top="30px";
+ moveX=moveZ=0;
+});
+
+/* JUMP */
+jump.addEventListener("touchstart",()=>{
+ if(grounded){velocityY=.18;grounded=false;}
+});
+
+/* ===== INVENTORY SYSTEM ===== */
+let money = 0;
+const prices = {Clownfish:5, Tuna:10, Shark:25, Pufferfish:25, SeaTurtle:50, MantaRay:500, Megalodon:1000};
+
+// Start with 9 slots
+let inventory = ["Rod","","","","","","","",""];
+let selected = 0;
+const inv = document.getElementById("inventory");
+let lastTapTime = 0;
+
+// Parse item stacks
+function parseStack(item){
+  if(!item) return {name:"", count:0};
+  const match = item.match(/^(.+)x(\d+)$/);
+  if(match) return {name:match[1], count:parseInt(match[2])};
+  return {name:item, count:1};
+}
+
+// Add item with stacking logic
+function addItem(fishName){
+  const maxStack = 99;
+  // Try to stack first
+  for(let i=0;i<inventory.length;i++){
+    const {name,count} = parseStack(inventory[i]);
+    if(name === fishName && count < maxStack){
+      const newCount = Math.min(count+1, maxStack);
+      inventory[i] = fishName + (newCount>1 ? "x"+newCount : "");
+      renderInv();
+      return;
+    }
+  }
+  // Find empty slot
+  for(let i=0;i<inventory.length;i++){
+    if(inventory[i]===""){
+      inventory[i] = fishName;
+      renderInv();
+      return;
+    }
+  }
+  alert("Inventory full!");
+}
+
+// Tap handling (preview / sell)
+function slotTap(index){
+  const {name,count} = parseStack(inventory[index]);
+  selected = index;
+  renderInv();
+  updateRod();
+
+  if(!name || name==="Rod" || name==="Sun Rod" || name==="Bait") return;
+
+  const now = Date.now();
+  if(lastTapTime && now-lastTapTime<500 && selected===index){
+    // Double tap → sell
+    money += (prices[name]||0) * count; // Sell all in stack
+    document.getElementById("money").textContent = "$" + money;
+    inventory[index] = "";
+    renderInv();
+    lastTapTime = 0;
+  }else{
+    // Single tap → preview
+    msg.style.display = "block";
+    msg.textContent = name + " (double tap to sell all)";
+    setTimeout(()=>{msg.style.display="none"},1000);
+    lastTapTime = now;
+  }
+}
+
+// Render inventory with scrollable UI
+function renderInv(){
+  inv.innerHTML = "";
+  inventory.forEach((it,i)=>{
+    const d = document.createElement("div");
+    d.className = "slot"+(i===selected?" active":"");
+    d.textContent = it;
+    d.onclick = ()=>slotTap(i);
+    inv.appendChild(d);
+  });
+}
+renderInv();
+
+// Inventory expansion
+function expandInventory(slots=3){
+  for(let i=0;i<slots;i++) inventory.push("");
+  renderInv();
+}
+
+// Example shop button for expansion (can be added to your shop)
+const expandBtn = document.createElement("button");
+expandBtn.textContent = "Buy 3 Inventory Slots ($500)";
+expandBtn.onclick = ()=>{
+  if(money<500) return alert("Not enough money");
+  money -= 500;
+  document.getElementById("money").textContent = "$"+money;
+  expandInventory(3);
+};
+shop.appendChild(expandBtn);
+
+/* ROD */
+let rod=null;
+function updateRod(){
+ if(inventory[selected]==="Rod"||inventory[selected]==="Sun Rod"){
+   if(!rod){
+     rod=new THREE.Mesh(new THREE.CylinderGeometry(.02,.02,1),new THREE.MeshStandardMaterial({color:inventory[selected]==="Sun Rod"?0xffcc00:0x8b4513}));
+     rod.position.set(.3,-.4,-1);
+     rod.rotation.z=Math.PI/4;
+     camera.add(rod);
+   }else{
+     rod.material.color.set(inventory[selected]==="Sun Rod"?0xffcc00:0x8b4513);
+   }
+ }else if(rod){camera.remove(rod);rod=null;}
+}
+
+/* ORB CLICK → SHOP */
+const raycaster=new THREE.Raycaster();
+const touchVec=new THREE.Vector2();
+addEventListener("touchstart",e=>{
+ touchVec.x=(e.touches[0].clientX/innerWidth)*2-1;
+ touchVec.y=-(e.touches[0].clientY/innerHeight)*2+1;
+ raycaster.setFromCamera(touchVec,camera);
+ if(raycaster.intersectObject(orb).length){
+  shop.style.display="block";
+ }
+});
+
+/* SHOP BUTTONS */
+buySunRod.onclick=()=>{
+ if(money<1000)return alert("Not enough money");
+ for(let i=0;i<inventory.length;i++){
+  if(inventory[i]==="Rod"){inventory[i]="Sun Rod"; renderInv(); money-=1000; document.getElementById("money").textContent="$"+money; return;}
+ }
+ for(let i=0;i<inventory.length;i++){
+  if(inventory[i]===""){inventory[i]="Sun Rod"; money-=1000; document.getElementById("money").textContent="$"+money; renderInv(); return;}
+ }
+ alert("Inventory full!");
+};
+
+buyBait.onclick=()=>{
+ if(money<25)return alert("Not enough money");
+ for(let i=0;i<inventory.length;i++){
+  if(inventory[i]===""){inventory[i]="Bait"; money-=25; document.getElementById("money").textContent="$"+money; renderInv(); return;}
+ }
+ alert("Inventory full!");
+};
+
+/* ===== REACTION-TIME MINI-GAME FISHING ===== */
+let holding=false, holdTime=0, fishing=false, taps=0, requiredTaps=10, fishButton=null, fishTimer=null;
+
+addEventListener("touchstart",()=>{if(inventory[selected]==="Rod"||inventory[selected]==="Sun Rod"){if(!fishing){holding=true; holdTime=0}}});
+addEventListener("touchend",()=>{holding=false; holdTime=0});
+
+function randomFish(){
+ const r=Math.random();
+ let fish="";
+ if(r<1/50) fish="Megalodon";
+ else if(r<1/25) fish="MantaRay";
+ else if(r<1/5) fish="SeaTurtle";
+ else if(r<1/3) fish="Pufferfish";
+ else if(r<0.58) fish="Tuna";
+ else if(r<0.83) fish="Clownfish";
+ else fish="Shark";
+
+ if(inventory[selected]==="Sun Rod" && Math.random()<0.5){
+  const rarities=["Megalodon","MantaRay","SeaTurtle"];
+  fish=rarities[Math.floor(Math.random()*rarities.length)];
+ }
+ return fish;
+}
+
+function createFishButton(){
+ if(fishButton) document.body.removeChild(fishButton);
+ fishButton=document.createElement("button");
+ fishButton.textContent="PRESS HERE!";
+ fishButton.style.position="fixed";
+ fishButton.style.zIndex="100";
+ fishButton.style.padding="12px 20px";
+ fishButton.style.fontSize="18px";
+ fishButton.style.borderRadius="8px";
+ fishButton.style.background="yellow";
+ fishButton.style.color="black";
+ const x=Math.random()*(window.innerWidth-150);
+ const y=Math.random()*(window.innerHeight-60);
+ fishButton.style.left=x+"px";
+ fishButton.style.top=y+"px";
+ document.body.appendChild(fishButton);
+}
+
+function startFishing(){
+ fishing=true;
+ holding=false;
+ holdTime=0;
+ taps=0;
+ msg.style.display="block";
+ msg.textContent="Casting...";
+ const castDelay = 1000 + Math.random()*1500;
+
+ setTimeout(()=>{
+   const fish=randomFish();
+   msg.textContent=fish+"! Catch it by pressing the button!";
+   
+   function failFish(){
+     msg.textContent="Fish escaped!";
+     fishing=false;
+     if(fishButton) document.body.removeChild(fishButton);
+     fishButton=null;
+     clearTimeout(fishTimer);
+     setTimeout(()=>{msg.style.display="none"},2000);
+   }
+
+   function nextTap(){
+     if(taps>=requiredTaps){
+       msg.textContent="Caught "+fish+"!";
+       addItem(fish);
+       fishing=false;
+       if(fishButton) document.body.removeChild(fishButton);
+       fishButton=null;
+       clearTimeout(fishTimer);
+       setTimeout(()=>{msg.style.display="none"},2000);
+       return;
+     }
+     createFishButton();
+     fishTimer=setTimeout(failFish,1000);
+     fishButton.onclick=()=>{
+       taps++;
+       clearTimeout(fishTimer);
+       if(fishButton) document.body.removeChild(fishButton);
+       fishButton=null;
+       nextTap();
+     }
+   }
+
+   nextTap();
+ }, castDelay);
+}
+
+/* BOOK */
+book.onclick=()=>rules.style.display="block";
+
+/* ===== LOGIN FEATURE ===== */
+const loginDiv=document.getElementById("login");
+const usernameInput=document.getElementById("username");
+const loginBtn=document.getElementById("loginBtn");
+let username=null;
+
+function loadPlayerData(name){
+ const data=localStorage.getItem("fishingGame_"+name);
+ if(data){
+  const parsed=JSON.parse(data);
+  money=parsed.money||0;
+  inventory.splice(0,inventory.length,...parsed.inventory||inventory);
+  selected=parsed.selected||0;
+ }
+ document.getElementById("money").textContent="$"+money;
+ renderInv();
+}
+
+function savePlayerData(){
+ if(!username)return;
+ localStorage.setItem("fishingGame_"+username,JSON.stringify({money,inventory,selected}));
+}
+
+loginBtn.onclick=()=>{
+ const name=usernameInput.value.trim();
+ if(!name)return alert("Enter a username");
+ username=name;
+ loadPlayerData(username);
+ loginDiv.style.display="none";
+ savePlayerData();
+};
+
+setInterval(savePlayerData,5000);
+
+/* ===== LOOP ===== */
 function animate(){
  requestAnimationFrame(animate);
+ updateRod();
+
  camera.rotation.order="YXZ";
  camera.rotation.y=yaw;
  camera.rotation.x=pitch;
+
+ const f=new THREE.Vector3(Math.sin(yaw),0,Math.cos(yaw));
+ const r=new THREE.Vector3(f.z,0,-f.x);
+ player.position.add(f.multiplyScalar(moveZ*.15));
+ player.position.add(r.multiplyScalar(moveX*.15));
+
+ velocityY-=.01;
+ player.position.y+=velocityY;
+ if(player.position.y<=3){player.position.y=3;velocityY=0;grounded=true;}
+
+ if(holding&&!fishing){
+  holdTime+=.016;
+  if(holdTime>=2){startFishing();holding=false;}
+ }
+
  renderer.render(scene,camera);
 }
 animate();
