--- a/index.html
+++ b/index.html
@@ -290,10 +290,58 @@ placeVegetation(28, 35); // ← MORE trees & bushes
 scene.add(vegetation);
 
 
-/* ORB */
-const orb=new THREE.Mesh(new THREE.SphereGeometry(.4,16,16),new THREE.MeshStandardMaterial({color:0xffff00,emissive:0xffff00,emissiveIntensity:.7}));
-orb.position.set(3,1.8,3);
-scene.add(orb);
+/* ===== WOOD TABLE SHOP ===== */
+const shopTable = new THREE.Group();
+
+/* TABLE TOP */
+const tableTop = new THREE.Mesh(
+  new THREE.BoxGeometry(2.4, 0.15, 1.6),
+  new THREE.MeshStandardMaterial({
+    color: 0x8b5a2b,
+    roughness: 0.8
+  })
+);
+tableTop.position.y = 1.1;
+tableTop.castShadow = true;
+shopTable.add(tableTop);
+
+/* LEGS */
+const legMat = new THREE.MeshStandardMaterial({
+  color: 0x6f4a2d,
+  roughness: 0.9
+});
+
+const legPositions = [
+  [-1, 0.55, -0.6],
+  [ 1, 0.55, -0.6],
+  [-1, 0.55,  0.6],
+  [ 1, 0.55,  0.6]
+];
+
+legPositions.forEach(p=>{
+  const leg = new THREE.Mesh(
+    new THREE.CylinderGeometry(0.08, 0.1, 1.1, 6),
+    legMat
+  );
+  leg.position.set(p[0], p[1], p[2]);
+  leg.castShadow = true;
+  shopTable.add(leg);
+});
+
+/* SIGN */
+const sign = new THREE.Mesh(
+  new THREE.BoxGeometry(1.4, 0.6, 0.1),
+  new THREE.MeshStandardMaterial({
+    color: 0xdeb887,
+    roughness: 0.7
+  })
+);
+sign.position.set(0, 1.7, -0.9);
+sign.castShadow = true;
+shopTable.add(sign);
+
+shopTable.position.set(3, 1, 3);
+scene.add(shopTable);
 
 /* PLAYER */
 const player=new THREE.Object3D();
