--- a/index.html
+++ b/index.html
@@ -655,6 +655,8 @@ animate();
 </body>
 </html>
 
+</script>
+
 /* ===============================
    FISH PREVIEW ADD-ON (DROP-IN)
    =============================== */
